--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^17.3.0",
     "@angular/service-worker": "^17.3.0",
     "@angular/ssr": "^17.3.17",
+    "bootstrap": "^5.3.6",
     "express": "^4.18.2",
     "prettier": "^3.5.3",
     "rxjs": "~7.8.0",
