fix: corrected deploy.yml file

--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -1,36 +1,13 @@
-name: Deploy Angular app to Vercel
+# .github/workflows/deploy.yml
+name: Trigger Vercel Deploy Hook
 
 on:
   push:
-    branches:
-      - main   
+    branches: [main]
 
 jobs:
-  build_and_deploy:
+  trigger-vercel:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18 
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build Angular app
-        run: npm run build -- --prod
-
-      - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v20
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-args: '--prod'
-          working-directory: '.' 
-        env:
-          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+      - name: Curl to Vercel Deploy Hook
+        run: curl -X POST ${{ secrets.VERCEL_DEPLOY_HOOK }}
