--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@angular/service-worker": "^17.3.0",
     "@angular/ssr": "^17.3.17",
     "bootstrap": "^5.3.6",
+    "chart.js": "^4.5.0",
     "express": "^4.18.2",
+    "ng2-charts": "^4.1.1",
     "prettier": "^3.5.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
